# pyre

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.rst  flatten-path4-closure-roadmap.md
majit/majit-backend-cranelift/: Cargo.toml
majit/majit-backend-cranelift/src/: compiler.rs  guard.rs  lib.rs
majit/majit-backend-cranelift/tests/: integration.rs  tail_sp_leak.rs
majit/majit-backend-dynasm/: Cargo.toml
majit/majit-backend-dynasm/src/: frame.rs  guard.rs  j2plan.rs  lib.rs  regalloc.rs  runner.rs
majit/majit-backend-dynasm/src/aarch64/: assembler.rs  cpu_ext.rs  mod.rs  regalloc.rs  registers.rs
majit/majit-backend-dynasm/src/x86/: assembler.rs  cpu_ext.rs  mod.rs  regalloc.rs  reghint.rs
majit/majit-backend-dynasm/tests/: basic_loop.rs
majit/majit-backend-wasm/: Cargo.toml
majit/majit-backend-wasm/js/: jit_glue.js
majit/majit-backend-wasm/src/: codegen.rs  failguard.rs  glue.rs  lib.rs
majit/majit-backend-wasm/tests/: codegen_test.rs
majit/majit-gc/: Cargo.toml
majit/majit-gc/src/: collector.rs  gc_sync.rs  gcreftracer.rs  header.rs  hook_cell.rs  lib.rs  minimarkpage.rs  nursery.rs  oldgen.rs  rewrite.rs  shadow_stack.rs  trace.rs  weakref.rs
majit/majit-ir/: Cargo.toml
majit/majit-ir/src/: bitstring.rs  box_ref.rs  debug.rs  descr.rs  descr_registry.rs  effectinfo.rs  eval_breaker.rs  eval_breaker_word.rs  field_entry.rs  forwarding.rs  indexmap_ext.rs  intbound.rs  lib.rs  op_descr.rs  op_type_index.rs  operand.rs  ptr_info.rs  rawbuffer.rs  resoperation.rs  resumedata.rs  value.rs  vec_set.rs
majit/majit-ir/tests/: green_key_str_content_equality.rs
majit/majit-metainterp/: Cargo.toml
majit/majit-metainterp/src/: blackhole.rs  box.rs  box_trace.rs  call_descr.rs  compile.rs  constant_pool.rs  counter.rs  cpu.rs  executor.rs  gc.rs  graphpage.rs  greenfield.rs  heapcache.rs  history.rs  io_buffer.rs  jit.rs  jit_state.rs  jitdriver.rs  jitprof.rs  lib.rs  logger.rs  memmgr.rs  opencoder.rs  parity.rs  pyjitpl.rs  recorder.rs  resoperation.rs  resume.rs  support.rs  trace_ctx.rs  virtualizable.rs  virtualref.rs  walkvirtual.rs  warmspot.rs  warmstate.rs
majit/majit-metainterp/src/jitcode/: assembler.rs  mod.rs
majit/majit-metainterp/src/optimizeopt/: autogenintrules.rs  bridgeopt.rs  dependency.rs  earlyforce.rs  guard.rs  heap.rs  info.rs  intbounds.rs  intdiv.rs  intutils.rs  mod.rs  optimizer.rs  pure.rs  rawbuffer.rs  renamer.rs  rewrite.rs  schedule.rs  shortpreamble.rs  simplify.rs  unroll.rs  util.rs  vector.rs  version.rs  virtualize.rs  virtualstate.rs  vstring.rs
majit/majit-metainterp/src/pyjitpl/: dispatch.rs  frame.rs  mod.rs
majit/majit-metainterp/tests/: elidable_canary_test.rs  elidable_ref_canary_test.rs  jit_driver_runtime_parity.rs  jit_interp_dispatch_ir_shape.rs  jit_interp_exception_preservation.rs  jit_interp_inline_helper_typed_return.rs  jit_interp_polymorphic_liveness.rs  jit_interp_ref_state_field.rs  resume_parity.rs
majit/majit-trace/: Cargo.toml
majit/majit-trace/src/: counter.rs  heapcache.rs  logger.rs
majit/majit-translate/: Cargo.toml  build.rs
majit/majit-translate/docs/: design-346-dstrategy-trait-object-field.md  design-346-foreign-lib-cluster-epic.md  design-346-generic-adt-classdef-consistency.md
majit/majit-translate/src/: codegen.rs  generated.rs  handler_spec.rs  hints.rs  inline.rs  lib.rs  local_crates.rs  model.rs  model_ssa.rs  opcode_dispatch.rs  parse.rs  pipeline.rs  test_support.rs
majit/majit-translate/src/annotator/: annrpython.rs  argument.rs  binaryop.rs  bookkeeper.rs  builtin.rs  classdesc.rs  description.rs  dictdef.rs  exception.rs  listdef.rs  mod.rs  model.rs  repr_guard.rs  signature.rs  specialize.rs  (+1 more)
majit/majit-translate/tests/: test_aheui_census.rs  test_annotator_model.rs  test_build_flow_integration.rs  test_bytecode_py314.rs  test_epic_acceptance_greps.rs  test_jit_marker_end_to_end.rs  test_make_jitcodes_produces_graph_keyed_output.rs  test_mir_dispatch.rs  test_mir_frontend.rs  test_mir_stress.rs  test_phase_d_find_all_graphs_parity.rs  test_phase_f_all_jitcodes.rs  test_pyopcode_rust_source_adapter_probe.rs  test_pyre_handler_graph_discovery.rs  test_pyre_pyframe_trait_resolution.rs  test_pyre_transform_all_handlers.rs  test_question_mark_produces_exceptional_successor.rs  test_raise_lowering_parity.rs  test_result_exc_lowering.rs  test_rust_type_classdesc_bootstrap.rs
pyre/pyre-interpreter/: Cargo.toml  build.rs
pyre/pyre-interpreter/src/: _pypy_generic_alias.rs  _structseq.rs  argument.rs  baseobjspace.rs  builtins.rs  call.rs  compile.rs  display.rs  error.rs  eval.rs  exception_table.rs  executioncontext.rs  function.rs  gateway.rs  genericalias.rs  importing.rs  jit_fnaddr.rs  lib.rs  listobject.rs  opcode_ops.rs  pycode.rs  pyframe.rs  pyopcode.rs  pytraceback.rs  reduce_protocol.rs  reduce_protocol_app.py  runtime_ops.rs  shared_opcode.rs  sliceobject.rs  stack_check.rs  structseq.rs  type_methods.rs  typedef.rs  unicodedb.rs
pyre/pyre-jit/: Cargo.toml
pyre/pyre-jit-trace/: Cargo.toml  build.rs
pyre/pyre-jit-trace/src/: assembler.rs  call_spec.rs  callbacks.rs  canonical_bridge.rs  descr.rs  driver.rs  frame_layout.rs  helpers.rs  jitcode_dispatch.rs  jitcode_runtime.rs  lib.rs  liveness.rs  metainterp.rs  opcode_handler_impls.rs  opcode_handler_impls_post.template.rs  opcode_handler_impls_pre.template.rs  pyjitcode.rs  pyjitpl.rs  pyre_cpu.rs  runtime_fnaddr_patch.rs  shadow_walker.rs  state.rs  super_inst_expand.rs  trace.rs  trace_opcode.rs  virtualizable_gen.rs  walker_frame_ops.rs
pyre/pyre-jit-trace/tests/: elidable_helper_canary_test.rs
pyre/pyre-jit/src/: call_jit.rs  eval.rs  lib.rs  trace_verify.rs
pyre/pyre-jit/tests/: instance_gc_stress.rs  list_elements_gc_stress.rs  list_young_dict_gc_stress.rs  method_cache_gc_stress.rs  type_namespace_gc_stress.rs  weak_subclasses_gc_stress.rs
pyre/pyre-macros/: Cargo.toml
pyre/pyre-macros/src/: lib.rs
pyre/pyre-wasm/: Cargo.toml  build-web.sh
pyre/pyre-wasm-runner/: Cargo.toml
pyre/pyre-wasm-runner/src/: main.rs  wasmi_host.rs
pyre/pyre-wasm/src/: lib.rs
(+903 files in other folders)
