[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/youknowone/pyre"
homepage = "https://github.com/youknowone/pyre"

[workspace]
resolver = "2"
default-members = ["pyre/pyrex"]
members = [
    # majit
    "majit/majit",
    "majit/majit-ir",
    "majit/majit-trace",
    "majit/majit-backend",
    "majit/majit-backend-cranelift",
    "majit/majit-backend-dynasm",
    "majit/majit-backend-wasm",
    "majit/majit-gc",
    "majit/majit-macros",
    "majit/majit-metainterp",
    "majit/majit-translate",
    "majit/majit-charon-reader",
    "majit/examples/tlr",
    "majit/examples/tl",
    "majit/examples/tla",
    "majit/examples/tiny2",
    "majit/examples/tiny3",
    "majit/examples/tinyframe",
    "majit/examples/braininterp",
    "majit/examples/dualtape",
    "majit/examples/tlc",
    "majit/examples/calc",
    "majit/examples/i64env",
    "majit/examples/spcount",
    # pyre
    "pyre/pyre-object",
    "pyre/pyre-macros",
    "pyre/pyre-native",
    "pyre/pyre-interpreter",
    "pyre/pyre-sandbox",
    "pyre/pyre-module",
    "pyre/pyre-jit",
    "pyre/pyre-jit-trace",
    "pyre/pyrex",
    "pyre/pyre-wasm",
    "pyre/pyre-wasm-test",
    "pyre/pyre-wasm-runner",
]

[workspace.dependencies]
# pyre internal crates
pyre-object = { version = "0.0.2", path = "pyre/pyre-object" }
pyre-macros = { version = "0.0.2", path = "pyre/pyre-macros" }
pyre-native = { version = "0.0.2", path = "pyre/pyre-native" }
pyre-interpreter = { version = "0.0.2", path = "pyre/pyre-interpreter" }
pyre-sandbox = { version = "0.0.2", path = "pyre/pyre-sandbox" }
pyre-module = { version = "0.0.2", path = "pyre/pyre-module" }
pyre-jit = { version = "0.0.2", path = "pyre/pyre-jit" }
pyre-jit-trace = { version = "0.0.2", path = "pyre/pyre-jit-trace" }
pyre-wasm = { version = "0.0.2", path = "pyre/pyre-wasm" }
pyrex = { version = "0.0.2", path = "pyre/pyrex" }

# Pinned to upstream main, which now carries the rustpython-unicode crate,
# the host_env mmap re-exports, the round-half-even float_ops::from_hex
# hex-float parser (#8234), the complex::parse_str internal-whitespace
# rejection (#8242), and the round-half-even normal-range float/complex repr
# tie (#8243).
rustpython-common = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
rustpython-literal = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
rustpython-compiler-core = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
num-complex = "0.4"
rustpython-host_env = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
rustpython-wtf8 = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
rustpython-unicode = { git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }
sre-engine = { package = "rustpython-sre_engine", git = "https://github.com/RustPython/RustPython.git", rev = "238bed66fbb0102a83dd9b5c8244e0276fbe8eac" }

# majit JIT framework
majit = { version = "0.0.2", path = "majit/majit" }
majit-metainterp = { version = "0.0.2", path = "majit/majit-metainterp", default-features = false }
majit-ir = { version = "0.0.2", path = "majit/majit-ir" }
majit-trace = { version = "0.0.2", path = "majit/majit-trace" }
majit-backend = { version = "0.0.2", path = "majit/majit-backend" }
majit-backend-cranelift = { version = "0.0.2", path = "majit/majit-backend-cranelift" }
majit-backend-dynasm = { version = "0.0.2", path = "majit/majit-backend-dynasm" }
majit-backend-wasm = { version = "0.0.2", path = "majit/majit-backend-wasm" }
majit-gc = { version = "0.0.2", path = "majit/majit-gc" }
majit-macros = { version = "0.0.2", path = "majit/majit-macros" }
majit-translate = { version = "0.0.2", path = "majit/majit-translate" }
majit-charon-reader = { version = "0.0.2", path = "majit/majit-charon-reader" }

# shared dependencies
parking_lot = "0.12"
malachite-bigint = "0.9"
num-traits = "0.2"
num-integer = "0.1"
bit-set = "0.10"
vecset = "0.0.4"
vecmap_rs = { package = "vecmap-rs", version = "0.2.4", features = ["serde"] }
indexmap = { version = "2.14", features = ["serde"] }
paste = "1"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
bincode = "1.3"

# proc-macro / codegen
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"

# data structures
smallvec = "1"

# cranelift backend
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
cranelift-native = "0.132"
target-lexicon = "0.13"

# dynasm backend
dynasm = "5"
dynasmrt = "5"

# wasm
wasm-encoder = { version = "0.245", default-features = false }
wasm-bindgen = "0.2"
wasmparser = "0.225"
# `wasm_js` is enabled only by `pyre-wasm`'s `web` feature (browser crypto via
# wasm-bindgen). The native-host `wasm-host` build instead selects getrandom's
# `custom` backend (`--cfg getrandom_backend="custom"`) so it carries no
# wasm-bindgen imports. Kept on the same 0.4 line as `rustpython-host_env` so
# the `web` build's `getrandom/wasm_js` feature reaches that shared instance.
getrandom = "0.4.2"
# Native host runtime for the wasm runner. Pinned to the wasmtime release whose
# `wasmtime-internal-*` support crates already ride along with cranelift 0.132
# (the version the dynasm/cranelift backends use), so it reuses the existing
# cranelift rather than duplicating it.
wasmtime = "45"

# system
libc = "0.2"
stacker = "0.1"

# string / hash
siphasher = "1.0"
rustc-hash = "2.1.3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
# zlib backend (pyre-native only): zlib-rs is a pure-Rust zlib port whose
# DEFLATE output is byte-identical to the reference C zlib.
flate2 = { version = "1.1.9", default-features = false }
# binascii transforms (pure-Rust logic).
base64 = "0.22"
crc32fast = "1.4"

# math
pymath = { version = "0.2.0", features = ["malachite-bigint"] }

# cli
lexopt = "0.3"
dirs = "6"
rustyline = "17"

# dev / build
tempfile = "3"
walkdir = "2"
insta = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
