[package]
name = "majit-backend-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cranelift code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-translate = { workspace = true }
majit-gc = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
target-lexicon = { workspace = true }

[features]
# This crate's integration tests depend on `majit-metainterp::recorder::Trace`,
# and `majit-metainterp` requires one backend feature to compile (pyjitpl/mod.rs
# selects `BackendImpl` and `compile_error!`s with none). Selecting the
# metainterp backend through this crate's own features keeps both
# `cargo test --all --features dynasm` and `--features cranelift` coherent, and
# lets the per-package form `cargo test -p majit-backend-cranelift --features
# cranelift` (or `--features dynasm`) compile the dev-dependency. The two
# features are mutually exclusive at the metainterp level (cranelift wins if
# both are set); pick one per test invocation.
dynasm = ["majit-metainterp/dynasm"]
cranelift = ["majit-metainterp/cranelift"]

[dev-dependencies]
majit-ir = { workspace = true, features = ["test-support"] }
majit-metainterp = { workspace = true }
smallvec = { workspace = true }
