[package]
name = "majit-backend-dynasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynasm code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-translate = { workspace = true }
majit-gc = { workspace = true }
dynasm = { workspace = true }
dynasmrt = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
majit-ir = { workspace = true, features = ["test-support"] }
majit-trace = { workspace = true }
