[package]
name = "majit-backend-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly backend for majit — generates wasm bytecodes via wasm-encoder"

[features]
default = ["web"]
# Instantiate JIT-emitted trace modules through the browser
# `WebAssembly` API via wasm-bindgen (`js/jit_glue.js`).
web = ["dep:wasm-bindgen"]
# Instantiate JIT-emitted trace modules through plain wasm imports
# supplied by a native embedder (e.g. a wasmi/wasmtime host). No
# JavaScript runtime required.
host-import = []

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-gc = { workspace = true }
# `BhDescr` (blackhole allocation descriptors) names the `bh_new*` override
# parameter types, matching the `Backend` trait signature.
majit-translate = { workspace = true }
wasm-encoder = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
wasmparser = { workspace = true }
smallvec = { workspace = true }
