[package]
name = "majit-metainterp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Meta-interpreter and optimizer for majit JIT compiler"

[features]
# A backend is mandatory (see the `compile_error!` in pyjitpl/mod.rs).  Default
# to dynasm so the crate is buildable/testable on its own (`cargo test -p
# majit-metainterp`); downstream consumers inherit `default-features = false`
# from the workspace dependency and select their backend explicitly, so this
# default never leaks into a cranelift-only build.
default = ["dynasm"]
dynasm = ["dep:majit-backend-dynasm"]
cranelift = ["dep:majit-backend-cranelift"]

[dependencies]
majit-ir = { workspace = true }
majit-trace = { workspace = true }
majit-backend = { workspace = true }
majit-gc = { workspace = true }
majit-translate = { workspace = true }
bit-set = { workspace = true }
smallvec = { workspace = true }
vecset = { workspace = true }
indexmap = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native backends never build for wasm32; on wasm32 the backend is
# selected by target_arch (majit-backend-wasm). Gating both here keeps a
# stray `dynasm`/`cranelift` feature (e.g. leaking through a default) from
# pulling a native-only crate into a wasm32 build.
majit-backend-cranelift = { workspace = true, optional = true }
majit-backend-dynasm = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Specified directly (not via workspace inheritance) so default-features can
# be turned off. The host binding (web vs host-import) is chosen explicitly
# upstream through pyre-jit's `wasm-web` / `wasm-host` features; pulling the
# `web` default here would unify `web` into a `host-import` build and route
# `glue.rs` through wasm-bindgen instead of the plain wasm imports.
majit-backend-wasm = { path = "../majit-backend-wasm", version = "0.0.2", default-features = false }

[dev-dependencies]
majit-macros = { workspace = true }
majit-gc = { workspace = true }
smallvec = { workspace = true }
