[package]
name = "majit-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace management and warm-up state for majit JIT compiler"

[dependencies]
indexmap = { workspace = true }
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-gc = { workspace = true }
bit-set = { workspace = true }
smallvec = { workspace = true }
vecset = { workspace = true }
