[package]
name = "majit-translate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of RPython's translation pipeline (flowspace → annotator → rtyper → translator → jit/codewriter)"

[dependencies]
syn = { workspace = true, features = ["parsing"] }
quote = { workspace = true }
# `span-locations` exposes `Span::start()` / `Span::end()` for spans
# created outside a proc-macro runtime, so `build_host_function_from_rust`
# can read `syn::ItemFn`'s source line into the synthetic
# `HostCode.co_firstlineno` (bytecode.py:46-60 parity). Without it
# spans carry no line info and `co_firstlineno` falls back to 0.
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
indexmap = { workspace = true }
majit-ir = { workspace = true }
libc = { workspace = true }
# PRE-EXISTING-ADAPTATION, parity rule #1.
#
# RPython's `rpython/flowspace/bytecode.py` does `from opcode import
# EXTENDED_ARG, HAVE_ARGUMENT` + `from rpython.tool.stdlib_opcode import
# host_bytecode_spec` — i.e. host-Python's stdlib `opcode` module IS the
# opcode source of truth, RPython just wraps it. It does NOT ship its own
# CPython opcode enum.
#
# Rust has no "host Python" the same way CPython does. rustpython-compiler-core
# plays the role of the stdlib `opcode` module here: a neutral crate that
# owns the CPython-3.14 opcode definitions (Instruction, CodeObject,
# ConstantData, ...). majit-translate wraps it in
# flowspace::bytecode::HostCode, exactly the way RPython wraps `opcode`.
#
# Critically this is NOT a dependency on pyre: rustpython-compiler-core is
# external to both majit and pyre. The `rpython/` ⊥ `pypy/` boundary holds.
rustpython-compiler-core = { workspace = true }
# `md-5` mirrors upstream `hashlib.md5(...).hexdigest()` used by
# `rpython/translator/backendopt/stat.py:48` to fingerprint each
# graph's `co_code` when `print_statistics(save_per_graph_details=...)`
# emits the per-graph file. Debug-only (gated by
# `config.translation.backendopt.print_statistics`).
md-5 = { workspace = true }
vecset = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
walkdir = { workspace = true }
rustpython-compiler = { workspace = true }
