[package]
name = "pyre-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bytecode interpreter for pyre"

[features]
default = ["host_env"]
host_env = ["dep:rustpython-host_env"]
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]

[dependencies]
pyre-object = { workspace = true }
pyre-macros = { workspace = true }
rustpython-wtf8 = { workspace = true }
majit-gc = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
stacker = { workspace = true }
rustpython-compiler = { workspace = true }
rustpython-compiler-core = { workspace = true }
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
pymath = { workspace = true }
sre-engine = { workspace = true }
rustpython-host_env = { workspace = true, optional = true }
libc = { workspace = true }
siphasher = { workspace = true }
caseless = { workspace = true }
indexmap = { workspace = true }
paste = { workspace = true }
