[package]
name = "pyre-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bytecode interpreter for pyre"

[features]
default = ["host_env"]
host_env = ["dep:rustpython-host_env"]
# Expose the crate-internal `test_hooks` module (thread-local dict hash-hook
# installer) to downstream test builds. Enabled by `pyre-jit`'s
# dev-dependency so its `#[test]`s — which drive interpreter frames through
# `init_typeobjects` without compiling this crate under `cfg(test)` — install
# the same single hash path production wires at boot. Off in every non-test
# build (dev-dependencies never participate there).
test-hooks = []
# RPython-style sandbox: route every OS call through host_seam's marshalling
# trampoline instead of the real syscall. Implies host_env (same call surface,
# swapped bodies); the real-vs-trampoline choice lives only inside host_seam.
sandbox = ["host_env", "dep:pyre-sandbox"]
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]
# Embed the pure-Python stdlib closure needed for `import re` into the binary
# and serve it from an in-memory VFS — the browser/web wasm target has no
# filesystem. Off by default; the native and wasmtime-runner targets read the
# real filesystem instead.
wasm_vfs = ["dep:lz4_flex", "host_env"]

[dependencies]
pyre-object = { workspace = true }
pyre-macros = { workspace = true }
pyre-native = { workspace = true }
rustpython-wtf8 = { workspace = true }
rustpython-literal = { workspace = true }
rustpython-common = { workspace = true }
rustpython-unicode = { workspace = true }
majit-gc = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
stacker = { workspace = true }
rustpython-compiler = { workspace = true }
rustpython-compiler-core = { workspace = true }
num-complex = { workspace = true }
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
pymath = { workspace = true }
sre-engine = { workspace = true }
rustpython-host_env = { workspace = true, optional = true }
pyre-sandbox = { workspace = true, optional = true }
libc = { workspace = true }
siphasher = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
indexmap = { workspace = true }
paste = { workspace = true }
# Decompresses the embedded stdlib VFS blob at runtime (wasm_vfs). Decode-only,
# no_std-compatible safe path; the encode side is unused here.
lz4_flex = { version = "0.13", default-features = false, features = [
    "safe-encode",
    "safe-decode",
], optional = true }

[build-dependencies]
# Compresses the embedded stdlib VFS blob at build time (only does work when the
# wasm_vfs feature is enabled; otherwise build.rs returns early).
lz4_flex = "0.13"
