[package]
name = "pyre-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JIT compiler integration for pyre interpreter"

[features]
default = ["dynasm"]
jit = []  # meta feature: enabled by cranelift or dynasm
cranelift = ["jit", "majit-backend-cranelift", "majit-metainterp/cranelift", "pyre-jit-trace/cranelift"]
dynasm = ["jit", "majit-backend-dynasm", "majit-metainterp/dynasm", "pyre-jit-trace/dynasm"]
# Forward the majit-translate `mir-frontend` feature so pyre-jit builds
# can select the MIR front-end from the top level
# (`cargo build --features pyre-jit/mir-frontend`).  Production
# validation runs check.py with this enabled and
# PYRE_MIR_FRONTEND_LLBC pointing at an extracted .ullbc.
mir-frontend = ["majit-translate/mir-frontend"]
# Collect on every allocation so instance / container GC tracing is
# exercised eagerly. majit-gc is compiled once per build, so this single
# edge enables the stress mode for the whole pyre-jit dependency closure.
gc_stress = ["majit-gc/gc_stress"]
# Select the host binding for the wasm backend (only meaningful on
# wasm32). `wasm-web` instantiates JIT traces through the browser
# `WebAssembly` API; `wasm-host` through plain wasm imports a native
# embedder (wasmi / wasmtime) supplies.
wasm-web = ["majit-backend-wasm/web"]
wasm-host = ["majit-backend-wasm/host-import"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
num-traits = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
majit-translate = { workspace = true }
majit-backend = { workspace = true }
majit-trace = { workspace = true }
majit-gc = { workspace = true }
pyre-jit-trace = { workspace = true }
majit-backend-cranelift = { workspace = true, optional = true }
majit-backend-dynasm = { workspace = true, optional = true }
vecset = { workspace = true }
bit-set = { workspace = true }
rustpython-wtf8 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Specified directly (not via workspace inheritance) so default-features
# can be turned off — the host binding (web vs host-import) is chosen
# explicitly through pyre-jit's `wasm-web` / `wasm-host` features.
majit-backend-wasm = { path = "../../majit/majit-backend-wasm", version = "0.0.2", default-features = false }

[dev-dependencies]
pyre-jit-trace = { workspace = true, features = ["test-support"] }
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
