[package]
name = "pyre-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "pyre Python interpreter compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[features]
default = ["web"]
# Browser / JS host: `run_python` is exported through wasm-bindgen and the
# JIT instantiates trace modules via the `WebAssembly` API (`jit_glue.js`).
# The browser has no filesystem, so the stdlib `import re` needs is embedded
# and served from an in-memory VFS (`pyre-interpreter/wasm_vfs`).
web = [
    "dep:wasm-bindgen",
    "pyre-jit/wasm-web",
    "getrandom/wasm_js",
    "pyre-interpreter/wasm_vfs",
]
# Native wasm host (wasmi / wasmtime): a plain C-ABI surface
# (`pyre_alloc` / `pyre_dealloc` / `pyre_run_python`) is exported and the
# JIT instantiates trace modules via plain wasm imports. No JavaScript.
# getrandom uses its `custom` backend here (see the `__getrandom_v03_custom`
# shim in `src/lib.rs`), selected by building with
# `--cfg getrandom_backend="custom"`, so the module carries no wasm-bindgen
# imports a non-JS embedder could not satisfy.
wasmi = ["pyre-jit/wasm-host", "dep:majit-backend"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
# Specified directly (not via workspace inheritance) so default-features
# can be turned off — drops the native `dynasm` backend, which does not
# build for wasm32; on wasm32 the JIT backend is selected by target_arch.
pyre-jit = { path = "../pyre-jit", version = "0.0.2", default-features = false }
wasm-bindgen = { workspace = true, optional = true }
getrandom = { workspace = true }
# Only the `wasmi` (native-host) build installs the residual-call host
# trampoline (`call_stub::set_residual_host_call`); the `web` build keeps
# the in-module transmute path until the JS glue grows the matching import.
majit-backend = { workspace = true, optional = true }
